// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importSpeedscopeProfiles 0.0.1 evented profile 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "stacks": Array [
    "a;b;c 2",
    "a;b;d 4",
    "a;b;c 3",
    "a;b 5",
  ],
}
`;

exports[`importSpeedscopeProfiles 0.1.2 sampled profile 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "stacks": Array [
    "a;b;c 2.00s",
    "a;b;d 4.00s",
    "a;b;c 3.00s",
    "a;b 5.00s",
  ],
}
`;
